# Dynamic-Web-Scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-package.yml  python-publish.yml  release.yml
src/: web_scraper.py
src/utils/: argparse.py  browser.py  json.py  logger.py  notifier.py
src/web_scraper/: __init__.py  results.json  scraper.py
src/web_scraper/utils/: argparse.py  browser.py  config.py  helpers.py  json.py  logger.py  notifier.py  parser.py
