[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-scraper"
version = "1.0.1"
description = "Dynamic web scraper specifically designed for websites that dynamically load elements (such as AngularJS). It runs at specified time intervals and notifies you about specific updates on the site."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Rodrigo Martin Núñez", email = "rodrigomartinnunez@gmail.com" }
]
maintainers = [
    { name = "Rodrigo Martin Núñez", email = "rodrigomartinnunez@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["web", "setuptools", "development", "scraper", "angularjs", "selenium"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
    "beautifulsoup4==4.12.3",
    "bs4==0.0.2",
    "colorlog==6.8.2",
    "lxml==5.2.2",
    "path==16.14.0",
    "selenium==4.21.0",
    "win11toast==0.35 ; platform_system == 'Windows'",
]

[project.urls]
"Homepage" = "https://github.com/P-ict0/AngularJS-Dynamic-Web-Scraper.git"
"Bug Reports" = "https://github.com/P-ict0/AngularJS-Dynamic-Web-Scraper/issues"

[project.scripts]
dynamic-scraper = "src.web_scraper:main"

[tool.setuptools]
packages = ["src.web_scraper", "src.web_scraper.utils"]
